Fix visibillity issues

--- a/.config/spicetify/Themes/Custom/user.css
+++ b/.config/spicetify/Themes/Custom/user.css
@@ -7,5 +7,5 @@
 }
 
 .glue-page-header__background-color {
-  display: none;
+  background-image: none;
 }
